finished project - fixed scrollbar x by subtracting 15px from app width

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   flex-direction: column;
   justify-content: space-between;
-  width: 100vw;
+  width: calc(100vw - 15px);
   min-height: 100vh;
 }
 
