--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ html {
 
 body {
   font-family: sans-serif;
-  width: 100vw;
   min-height: 100vh;
   color: #ffffff;
   background-color: #000000;
